# eval-harness

./: .env.example  .gitignore  CLAUDE.md  DESIGN.md  Makefile  README.md  pyproject.toml
api/: __init__.py  main.py  schemas.py
core/: __init__.py  cli.py  config.py
core/clusters/: __init__.py  cluster.py
core/eval/: __init__.py  runner.py
core/llm/: __init__.py  client.py  models.py
core/optimizer/: __init__.py  gepa.py
core/scorers/: __init__.py  layer1_deterministic.py  layer2_semantic.py  layer3_trajectory.py  layer4_safety.py  registry.py
core/store/: __init__.py  db.py  models.py  schema.sql
core/tracing/: __init__.py  mlflow_setup.py  spans.py
databricks/: journey_of_an_agent.py
docs/: Companion_Article.md  Runbook.md  Session_Plan_Journey_of_an_Agent.md  Transcript_Amy_Boyd_Mind_The_Gap.md  Transcript_Ara_Khan_Evals_Are_Broken.md  Transcript_Laurie_Voss_Ship_Real_Agents.md  Transcript_MLflow_Advanced_Tracing.md  Transcript_MLflow_Evaluate_RAG.md  Transcript_MLflow_Issue_Detection.md  Transcript_Tejas_Kumar_Harnesses.md  blog_post.md
docs/deck/: DATABRICKS_NIST_NUMBERS.md  journey-of-an-agent.html
docs/figures/: gen_fable_figures.py  make_figures.py
docs/refs/: hylak_how_to_eval.md  mlflow_structured_ai_eval.md  openai_macro_evals_cookbook.md  shankar_ai_qual_analysis.md  torres_ai_osts.md  wolfe_agent_evals.md
examples/quill/: __init__.py  dspy_program.py  gepa_metric.py  graph.py  retrieval.py  seed_corpus.py  tools.py
scripts/: inflate_pareto.py  prebake.py  recompute_headline.py  run_real_gepa.py  run_tuned_emb.py  run_tuned_iso.py  run_tuned_live.py  run_tuned_model.py  run_tuned_v2.py  seed_cold_open.py  seed_demo_data.py
ui/: next.config.ts  package-lock.json  package.json  tailwind.config.ts
ui/app/: fonts.ts  globals.css  layout.tsx  page.tsx
ui/components/: AxisBars.tsx  ClusterCard.tsx  DetectionContrast.tsx  LiePanel.tsx  ParetoChart.tsx  PromptDiff.tsx  RunBadge.tsx  (+2 more)
(+31 files in other folders)
