[project]
name = "eval-harness"
version = "0.1.0"
description = "Self-evolving eval harness for production AI agents — companion repo for 'Journey of an Agent' (Agent Harness Bangalore, 2026-05-30)"
authors = [{ name = "Praneeth Paikray" }]
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
readme = "README.md"

dependencies = [
    # Orchestration
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",

    # Tracing + eval
    "mlflow>=3.0.0",
    "ragas>=0.2.0",

    # Optimizer (DSPy + GEPA)
    "dspy-ai>=2.5.0",

    # Retrieval
    "faiss-cpu>=1.8.0",
    "sentence-transformers>=3.0.0",

    # LLM gateway (OpenAI-compatible client for OpenRouter)
    "openai>=1.50.0",
    "tenacity>=9.0.0",

    # Backend
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",

    # Utility
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "rich>=13.0.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "httpx>=0.27.0",
]

[project.scripts]
evalh = "core.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["core*", "api*", "examples*"]
exclude = ["tests*", "scripts*", "ui*", "docs*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
